2006-10-16  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.17.0:
        * NEWS: Updated.
        * configure.ac: Update to new release version.
	* docs/C/gdm.xml: Update version number.

2006-10-16  Brian Cameron  <brian.cameron@sun.com>

	* NEWS, daemon/auth.c, daemon/gdm.c, daemon/slave.c: Clean up
	  comments.

2006-10-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c, 
	  gui/greeter/greeter_parser.c:  Fix new at-spi code so that if
	  DOING_GDM_DEVELOPMENT is set it does not try to launch the AT
	  registry daemon.  Also fix broken string.
	* gui/greeter/greeter_item_ulist.c:  Fix code to avoid printing
	  out warnings when DOING_GDM_DEVELOPMENT is set.  Do not process
	  face browser code when user_list is NULL.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

	* gui/Makefile.am: Add -lX11 to link statements so that the new code
	  from Ariel that uses X atoms will build on Solaris.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

        * daemon/auth.c: Fix comment.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.c: Add missing break statement to case 't' in the
	  function gdm_common_expand_text.

2006-10-05  Brian Cameron  <brian.cameron@sun.com>

	* daemon/auth.c: Set authdir to NULL after freeing to avoid accessing
	  an invalid pointer.  Fixes bug #359831.  Patch provided by
	  Amnon Aaronsohn <bla@cs.huji.ac.il>.

2006-10-04  Ariel Rios  <ariel@gnu.org>

	Fixes bug #345434.
	* gui/gdmcommon.h (gdm_common_atspi_launch) Header for launching
	  the registry.
	* gui/gdmcommon.c (pre_atspi_launch): Execute the registry
	  that is supposed to be located on LIBEXECDIR. 
	  (filter_watch): Called whenever we get the PropertyNotify 
	  event and the we exit the gtk_main loop we are on and remove 
	  the event from the queue.
	  (filter_timeout): Function launched if after 1 second the registry
	  is not found.
	  (error_dialog): Display message saying no at-spi-registryd was found.